Time: 1 ms (86.86%) | Memory: 45.5 MB (45.92%) - LeetSync